JavaFX D3D12: LineChart does not render Axis text sometimes

XMLWordPrintable

    • generic
    • windows

      The text for the Axis in a LineChart does not render sometimes. Especially visible when resizing the application.

      Reproducer, just resize the window:

      import javafx.application.Application;
      import javafx.scene.Scene;
      import javafx.scene.chart.LineChart;
      import javafx.scene.chart.NumberAxis;
      import javafx.scene.layout.BorderPane;
      import javafx.scene.layout.StackPane;
      import javafx.stage.Stage;

      public class LineChartBug {

          public static void main(String[] args) {
              Application.launch(FxApp.class, args);
          }

          public static class FxApp extends Application {

              @Override
              public void start(Stage primaryStage) {
                  BorderPane root = new BorderPane();

                  NumberAxis xAxis = new NumberAxis();
                  NumberAxis yAxis = new NumberAxis();
                  LineChart<Number, Number> lineChart = new LineChart<>(xAxis, yAxis);

                  StackPane stackPane = new StackPane(lineChart);
                  stackPane.setMaxSize(300, 300);

                  root.setCenter(stackPane);

                  Scene scene = new Scene(root, 1280, 540);
                  primaryStage.setScene(scene);
                  primaryStage.show();
              }
          }

      }

            Assignee:
            Lukasz Kostyra
            Reporter:
            Marius Hanl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: