8369116: JavaFX D3D12: LineChart does not render Axis text sometimes

Scissor testing was incorrectly managed in RenderingContext:
- Disabling scissor test did not clear the mApplied flag for
  mDefaultScissor, which caused it to not be set next time Apply() was
  called
- Calling SetRenderTarget() according to D3D9 spec should disable
  scissor testing