modules/javafx.graphics/src/main/java/com/sun/prism/d3d12/D3D12Texture.java
@@ -69,7 +69,7 @@ class D3D12Texture extends BaseTexture<D3D12Resource<D3D12TextureData>> {
     public void update(Buffer buffer, PixelFormat format, int dstx, int dsty, int srcx, int srcy, int srcw, int srch,
                        int srcscan, boolean skipFlush) {
         if (!resource.isValid()) {
-            System.err.println("LKDEBUG update cancelled, resource not valid");
+            System.err.println("update cancelled, resource not valid");
             return;
         }
 
@@ -156,7 +156,7 @@ class D3D12Texture extends BaseTexture<D3D12Resource<D3D12TextureData>> {
     @Override
     public void update(MediaFrame frame, boolean skipFlush) {
         if (!resource.isValid()) {
-            System.err.println("LKDEBUG update(MediaFrame) cancelled, resource not valid");
+            System.err.println("update(MediaFrame) cancelled, resource not valid");
             return;
         }
 
